allow scaling and offset